Paragraph spacing & img-overlap bugfix
Images were overlapping the navbar whenever the page was scrolled down, so that was fixed. The text on some of the pages were to the left since they were not full width. That was also fixed.

--- a/main.css
+++ b/main.css
@@ -82,6 +82,7 @@ header h3 {
     width: 100%;
     height: auto;
     overflow: hidden;
+    z-index: -1;
 }
 
 .row-margin {
@@ -137,6 +138,7 @@ header h3 {
     width: 100%;
     position: fixed;
     background-color: rgba(255, 255, 255, 0.8);
+    z-index: 1;
 }
 
 .text-first {
